# OrangeFantasy

./: .gitignore  CLAUDE.md  README.md
.claude/skills/backend-coding-standards/: SKILL.md
.claude/skills/frontend-coding-standards/: SKILL.md
.docs/: 项目开发文档.md  项目设计文档.md
backend/: main.py  pyproject.toml
backend/src/: __init__.py  config.py
backend/src/ai/: __init__.py  ai_interact.py
backend/src/api/: __init__.py  auth.py  chapter.py  novel.py  user.py  writing.py
backend/src/db/: __init__.py  database.py
backend/src/models/: __init__.py  chapter_model.py  novel_model.py  user_model.py
backend/src/schemas/: __init__.py  auth_schemas.py  chapter_schemas.py  novel_schemas.py  user_schemas.py  writing_schemas.py
backend/src/utils/: __init__.py  get_user.py  jwt_manager.py  password_hasher.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  config.ts  http.ts  main.ts
frontend/src/assets/themes/: normal.css
frontend/src/components/auth/: Background.vue
frontend/src/components/common/: Dialog.vue
frontend/src/components/home/: Menu.vue  TopBar.vue
frontend/src/components/writing/: ControlPanel.vue  InfoAndChapters.vue  (+2 more)
frontend/src/pages/: Auth.vue  Home.vue  Writing.vue
frontend/src/router/: index.ts
frontend/src/services/: auth.ts  chapter.ts  novel.ts  user.ts
frontend/src/stores/: novelStore.ts  userSotre.ts
frontend/src/types/: authTypes.ts  chapterTypes.ts  novelTypes.ts  userTypes.ts
frontend/src/utils/: SSEReciver.ts  errorParser.ts  formatData.ts  imgToBase64.ts  showDoalog.ts
(+7 files in other folders)
